unpackaged/config/dev/objects/Account/fields/ssCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ssCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For use in testing Sticky Selectron</description>
    <label>ssCheckbox</label>
    <type>Checkbox</type>
</CustomField>