unpackaged/config/dev/objects/Account/fields/ssCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssCurrency__c</fullName>
    <description>Help field for sticky selectron dev</description>
    <label>ssCurrency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>