unpackaged/config/dev/objects/Account/fields/ssDate__c.field-meta.xml
<CustomField>
    <fullName>ssDate__c</fullName>
    <description>Help field for sticky selectron dev</description>
    <label>ssDate</label>
    <type>Date</type>
</CustomField>