unpackaged/config/dev/objects/Account/fields/ssDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssDateTime__c</fullName>
    <description>Help field for sticky selectron dev</description>
    <label>ssDateTime</label>
    <type>DateTime</type>
</CustomField>