unpackaged/config/dev/objects/Account/fields/ssDouble__c.field-meta.xml
<CustomField>
    <fullName>ssDouble__c</fullName>
    <description>Help field for sticky selectron dev</description>
    <label>ssDouble</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>