unpackaged/config/dev/objects/Account/fields/ssTime__c.field-meta.xml
<CustomField>
    <fullName>ssTime__c</fullName>
    <description>Help field for sticky selectron dev</description>
    <label>ssTime</label>
    <type>Time</type>
</CustomField>